apps/homelab/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  
  tls:
  - hosts:
      - alertmanager.danielmorgsilva.dev
    secretName: danielmorgsilva-dev-secret
  rules:
  - host: alertmanager.danielmorgsilva.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port:
              number: 9093
